packages/components/bolt-page-header/src/_page-header-mobile.scss
/* ------------------------------------ *\
   Page Header (mobile hamburger menu)
\* ------------------------------------ */

@import '@bolt/core-v3.x';
@import '_page-header-settings-and-tools.scss';

@include bolt-mq($until: large) {
  // Primary section container
  .c-bolt-page-header__primary {
    padding-top: $bolt-page-header-mobile-spacing-y;
    padding-right: $bolt-page-header-mobile-primary-nav-spacing-x;
    padding-bottom: $bolt-page-header-mobile-spacing-y;
    padding-left: $bolt-page-header-mobile-primary-nav-spacing-x;
    grid-template-columns: minmax(166px, auto) 1fr;
    grid-gap: 1px;
  }

  // Toolbar
  .c-bolt-page-header__toolbar {
    margin-left: auto;
  }

  .c-bolt-page-header__action-trigger {
    & ~ #{&} {
      margin-left: 1px;
    }
  }

  // Search panel
  .c-bolt-page-header__search {
    transform: translate3d(-100%, 0, 0);
    padding-right: $bolt-page-header-mobile-expanded-content-spacing-x;
    padding-left: $bolt-page-header-mobile-expanded-content-spacing-x;
    transition: visibility $bolt-transition, transform $bolt-transition;
  }

  // Off-canvas primary nav
  .c-bolt-page-header__nav {
    @include bolt-page-header-nav-background;

    display: block;
    visibility: hidden;
    position: fixed;
    top: var(--bolt-page-header-height);
    right: 0;
    bottom: 0;
    left: 0;
    transform: translate3d(100%, 0, 0);
    overflow: hidden;
    padding-bottom: $bolt-page-header-click-target-size;
    border-top-color: $bolt-border-color;
    border-top-style: $bolt-border-style;
    border-top-width: $bolt-border-width;
    transition: visibility $bolt-transition, transform $bolt-transition;

    @at-root .c-bolt-page-header__action-trigger--nav[aria-expanded='true']
        ~ #{&} {
      visibility: visible;
      transform: translate3d(0, 0, 0);
    }
  }

  .c-bolt-page-header__nav-list-group {
    @include bolt-vertical-scroll;

    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
  }

  .c-bolt-page-header__nav-list {
    margin: 0;
    padding: 0;
    list-style: none;

    & + #{&} {
      margin-top: var(--bolt-spacing-y-small);
    }
  }

  .c-bolt-page-header__nav-list-item {
    @include bolt-shadow('level-10');

    border-bottom-color: $bolt-border-color;
    border-bottom-style: $bolt-border-style;
    border-bottom-width: $bolt-border-width;
    background-color: var(--m-bolt-bg);
  }

  .c-bolt-page-header__nav-list-item.has-children {
    > .c-bolt-page-header__nav-link[aria-expanded='true'] {
      position: fixed;
      top: 0;
      right: 0;
      left: 0;
      z-index: 1;
      height: $bolt-page-header-click-target-size;
      border-bottom-color: $bolt-border-color;
      border-bottom-style: $bolt-border-style;
      border-bottom-width: $bolt-border-width;
      background-color: var(--m-bolt-bg);

      &:after {
        content: '';
        position: fixed;
        top: $bolt-page-header-click-target-size;
        right: 0;
        left: 0;
        z-index: 0;
        height: 100vh;
        background-color: var(--m-bolt-secondary);
      }
    }

    > .c-bolt-page-header__nav-list {
      @include bolt-page-header-nav-background;
      @include bolt-vertical-scroll;

      visibility: hidden;
      position: fixed;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      transform: translate3d(100%, 0, 0);
      z-index: 2;
      margin-top: $bolt-page-header-click-target-size;
      transition: margin-top $bolt-transition, visibility $bolt-transition,
        transform $bolt-transition;

      &.is-covered {
        overflow: visible;
        margin-top: 0;
      }

      .c-bolt-page-header__nav-list-item:first-of-type {
        margin-top: var(--bolt-spacing-y-small);
      }

      > * {
        opacity: 0;
        transition: opacity ease-out calc(#{$bolt-transition-timing} / 2);
      }
    }

    > .c-bolt-page-header__nav-link[aria-expanded='true']
      ~ .c-bolt-page-header__nav-list {
      visibility: visible;
      transform: translate3d(0, 0, 0);
      transition-delay: $bolt-transition-timing;

      > * {
        opacity: 1;
        transition-delay: calc(#{$bolt-transition-timing} / 2);
      }
    }
  }

  .c-bolt-page-header__nav-content {
    padding-top: var(--bolt-spacing-y-medium);
    padding-right: $bolt-page-header-mobile-expanded-content-spacing-x;
    padding-bottom: var(--bolt-spacing-y-medium);
    padding-left: $bolt-page-header-mobile-expanded-content-spacing-x;
  }

  // Nav link
  .c-bolt-page-header__nav-link {
    @include bolt-page-header-action-trigger;

    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding-right: $bolt-page-header-mobile-expanded-content-spacing-x;
    padding-left: $bolt-page-header-mobile-expanded-content-spacing-x;
    border-radius: 0;
  }

  .c-bolt-page-header__nav-list-item.is-selected .c-bolt-page-header__nav-link {
    padding-right: calc(
      #{$bolt-page-header-mobile-expanded-content-spacing-x} + var(
          --bolt-spacing-x-small
        ) * 2
    );
    color: var(--m-bolt-headline);
    cursor: default;

    &:after {
      content: '';
      display: block;
      transform: rotate(-45deg) translate3d(150%, 250%, 0);
      min-width: var(--bolt-spacing-x-small);
      height: var(--bolt-spacing-x-xsmall);
      border-bottom: 1px solid;
      border-left: 1px solid;
    }
  }

  .c-bolt-page-header__nav-link__content {
    grid-gap: var(--bolt-spacing-x-xsmall);
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .c-bolt-page-header__nav-link__nested-indicator {
    display: grid;
    align-items: center;
    line-height: 1;

    &:before {
      content: '';
      display: block;
      width: 0.5em;
      height: 0.5em;
      border-top: 1px solid;
      border-right: 1px solid;
      transition: border $bolt-transition;
      transform-origin: center center;
    }
  }

  .c-bolt-page-header__nav-link__nested-indicator--collapse {
    display: none;
    margin-right: var(--bolt-spacing-x-xsmall);

    &:before {
      transform: rotate(-135deg);
    }

    @at-root .c-bolt-page-header__nav-link[aria-expanded='true'] #{&} {
      display: grid;

      &:before {
        border-top-width: 2px;
        border-right-width: 2px;
      }
    }

    @at-root .c-bolt-page-header__nav-link:hover #{&} {
      &:before {
        border-top-width: 2px;
        border-right-width: 2px;
      }
    }
  }

  .c-bolt-page-header__nav-link__nested-indicator--expand {
    opacity: 1;
    margin-left: var(--bolt-spacing-x-xsmall);

    &:before {
      transform: rotate(45deg);
    }

    @at-root .c-bolt-page-header__nav-link[aria-expanded='true'] #{&} {
      opacity: 0;
      width: 0;
      margin-left: 0;
    }

    @at-root .c-bolt-page-header__nav-link:hover #{&} {
      &:before {
        border-top-width: 2px;
        border-right-width: 2px;
      }
    }
  }

  .c-bolt-page-header__nav-list--related-sites {
    .c-bolt-page-header__nav-link[aria-expanded='true']
      ~ .c-bolt-page-header__nav-list {
      .c-bolt-page-header__nav-link[aria-expanded] {
        display: none;
      }

      .c-bolt-page-header__nav-list {
        visibility: visible;
        opacity: unset;
        position: unset;
        top: unset;
        right: unset;
        bottom: unset;
        left: unset;
        transform: unset;
        z-index: unset;
        overflow: unset;
        margin-top: unset;

        .c-bolt-page-header__nav-list-item:first-of-type {
          margin-top: 0;
        }

        > * {
          opacity: 1;
        }
      }
    }
  }

  .c-bolt-page-header__nav-link--heading {
    display: none;
  }

  // Main CTA
  .c-bolt-page-header__cta {
    visibility: hidden;
    position: fixed;
    right: 0;
    bottom: 0;
    left: 0;
    transform: translate3d(100%, 0, 0);
    z-index: bolt-z-index(navFixed);
    height: $bolt-page-header-click-target-size;
    transition: visibility $bolt-transition, transform $bolt-transition;

    @at-root .c-bolt-page-header__action-trigger--nav[aria-expanded='true']
        ~ #{&} {
      visibility: visible;
      transform: translate3d(0, 0, 0);
    }

    > * {
      display: grid;
      place-items: center;
      border-radius: 0;
    }
  }

  // User flag
  .c-bolt-page-header__user-flag {
    place-items: center;
    grid-row-gap: var(--bolt-spacing-y-small);
    text-align: center;
  }

  .c-bolt-page-header__user-flag__img {
    width: 48px;
  }

  // Limits the tabbing to only items that are visible on the screen.
  .c-bolt-page-header__nav:not(.is-open) {
    .c-bolt-page-header__nav-list-group
      > .c-bolt-page-header__nav-list
      .c-bolt-page-header__nav-list {
      visibility: hidden;
    }
  }

  .c-bolt-page-header__nav.is-open {
    .c-bolt-page-header__nav-list:not(.is-active-trail),
    .c-bolt-page-header__nav-list-item:not(.is-active-trail) {
      visibility: hidden;
    }

    .c-bolt-page-header__nav-list.is-active {
      > .c-bolt-page-header__nav-list-item {
        visibility: visible;
      }
    }
  }

  .c-bolt-page-header__nav-list--related-sites
    .c-bolt-page-header__nav-list.is-active {
    .c-bolt-page-header__nav-list,
    .c-bolt-page-header__nav-list-item {
      visibility: visible;
    }
  }
}

